--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port=0
+#server.port=0
+server.port=8080
+
+# ===============================
+# THYMELEAF
+# ===============================
+spring.thymeleaf.cache=false
